--- a/app.html
+++ b/app.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>HID-F</title>
-    <meta name="description" content="HID-F Payload Generator" />
+    <title>HID-F Payload Generator</title>
+    <meta name="description" content="A powerful, client-side web application for low-code DuckyScript compilation with visual node-based programming interface." />
     <link
       rel="icon"
       href="%sveltekit.assets%/favicon.svg"
       type="image/svg+xml"
+    />
+    <link
+      rel="icon"
+      href="%sveltekit.assets%/favicon.ico"
+      type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
